--- a/ng-form/ng-form-nest.html
+++ b/ng-form/ng-form-nest.html
@@ -2,17 +2,7 @@
 <html lang="en" ng-app="notesApp">
 <head>
     <meta charset="UTF-8">
-    <title>表单错误提示</title>
-    <style>
-        .username.ng-valid {
-            background-color: #2aabd2;
-        }
-        .username.ng-dirty.ng-invalid-required{
-            background-color: red;
-        }.username.ng-dirty.ng-invalid-minlength{
-            background-color: lightpink;
-                 }
-    </style>
+    <title>内嵌表单</title>
 </head>
 <body ng-controller="MainCtrl as ctrl">
   <form ng-submit="ctrl.submit()" name="myForm">
@@ -20,8 +10,41 @@
              class="username"
              name="uname"
              ng-model="ctrl.user.username"
-             required
+             required=""
+             placeholder="Username"
              ng-minlength="4">
+      <input type="password"
+             class="password"
+             name="pwd"
+             ng-model="ctrl.user.password"
+             placeholder="Password"
+             required="">
+      <input type="checkbox" ng-model="ctrl.user.agree" >
+      <ng-form name="profile">
+          <input type="text"
+                 name="firstName"
+                 ng-model="ctrl.user.profile.firstName"
+                 placeholder="First Name"
+                 required>
+          <input type="text"
+                 name="middleName"
+                 placeholder="Middle Name"
+                 ng-model="ctrl.user.profile.middleName"
+                 required>
+          <input type="text"
+                 name="lastName"
+                 placeholder="Last Name"
+                 ng-model="ctrl.user.profile.lastName"
+                 required>
+          <input type="date"
+                 name="dob"
+                 placeholder="Date Of Birth"
+                 ng-model="ctrl.user.profile.dob">
+      </ng-form>
+
+      <span ng-show="myForm.profile.$invalid">
+          请填写个人资料
+      </span>
       <input type="submit"
              value="submit"
       ng-disabled="myForm.$invalid">
